manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mega-front-service
spec:
  selector:
    app: mega-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
