manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - host: books.mk.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-generator-service
            port:
              number: 80
